--- a/mutual_funds.ipynb
+++ b/mutual_funds.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./title.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -36,9 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data import\n",
-    "Using yahoofinancials python library to , let's import the latest data from yahoo finance. For top 5 mutual funds of US Debt securities.\n",
-    "For our research we would be using Long government portifolios, source from [here](https://money.usnews.com/funds/mutual-funds/rankings/long-government)."
+    "# Data import"
    ]
   },
   {
